Added java memory error to troubleshooting